CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
PROJECT(mbas-option CXX)

SET(CMAKE_CXX_STANDARD 17)

IF(MSVC)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -W4 -wd4505")
    string(REGEX REPLACE " /W3" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
ELSE ()
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
ENDIF()

add_executable(demo demo.cpp)
